--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>I'm a dreamer, a gamer and an entrepreneur. I love coding and building things and my journey to creating my little ding in the universe is just beginning.</p>
 </section>
