--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,6 +1,10 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <!-- <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css"> -->
-<link href='http://fonts.googleapis.com/css?family=Chicle' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Aladin' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+<!-- <link href='http://fonts.googleapis.com/css?family=Chicle' rel='stylesheet' type='text/css'> -->
+<!-- <link href='http://fonts.googleapis.com/css?family=Aladin' rel='stylesheet' type='text/css'> -->
+<!-- <link href='http://fonts.googleapis.com/css?family=Fondamento' rel='stylesheet' type='text/css'> -->
+<!-- <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'> -->
+<!-- <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'> -->
+
+<link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon|Monofett|Carter+One|Marvel' rel='stylesheet' type='text/css'>
