--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -2,8 +2,8 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works. your sites's.
 // If you love to use Web Fonts, you also need to add some lines to source/_includes/custom/head.html
 
-$sans: "Signika", sans-serif;
-$serif: "Aladin", serif;
+$sans: "Marvel", sans-serif;
+$serif: "Ovo", serif;
 //$mono: "Courier", monospace;
-//$heading-font-family: "Verdana", sans-serif;
-//$header-title-font-family: "Futura", sans-serif;
+$heading-font-family: "Carter One", sans-serif;
+$header-title-font-family: "Monofett", sans-serif;
