changed footer color

--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -26,6 +26,8 @@ p, ul, ol { color: #fff; }
 aside.sidebar h1 { color: #3B424C;}
 aside.sidebar ul, ol { color: #B29C85;}
 
+$footer-color: #333;
+
 /* To use the light Solarized highlighting theme uncomment the following line */
 //$solarized: light;
 
