new posts + font change

--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -7,4 +7,4 @@
 <!-- <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'> -->
 <!-- <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'> -->
 
-<link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon|Monofett|Carter+One|Marvel' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon|Monofett|Carter+One|Marvel|EB+Garamond' rel='stylesheet' type='text/css'>
