--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -2,7 +2,7 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works. your sites's.
 // If you love to use Web Fonts, you also need to add some lines to source/_includes/custom/head.html
 
-$sans: "Marvel", sans-serif;
+$sans: "EB Garamond", serif;
 $serif: "Ovo", serif;
 //$mono: "Courier", monospace;
 $heading-font-family: "Carter One", sans-serif;
