--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -58,6 +58,9 @@ h5, section h4, section section h3 {
 h6, section h5, section section h4, section section section h3 {
   font-size: .8em;
 }
+
+p { font-size: .8em; }
+
 p, blockquote, ul, ol { margin-bottom: 1.5em; }
 
 ul { list-style-type: disc;
